--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cucumber/cucumber": "^8.0.0",
     "@playwright/test": "^1.21.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "fs": "^0.0.1-security"
   }
 }
