--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -r ./results; mkdir results",
-    "test:qa:chrome": "environment=qa browser=chrome headless=false debug=false ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts qa chrome",
-    "test:qa:firefox": "environment=qa browser=firefox ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts qa firefox",
-    "test:qa:safari": "environment=qa browser=safari windowSize=393x851 ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts qa safari",
-    "test:qa:safari:responsive": "environment=qa browser=safari headless=false windowSize=393x851 ./node_modules/.bin/cucumber-js tests/features/**/*.feature --parallel 5; node cucumber-report-generator.ts qa safari",
-    "test:qa:chrome:parallel": "environment=qa browser=chrome ./node_modules/.bin/cucumber-js tests/features/**/*.feature --parallel 5; node cucumber-report-generator.ts qa chrome",
-    "test:live:chrome": "environment=live browser=chrome ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts live chrome",
-    "report:qa:chrome": "node cucumber-report-generator.ts qa chrome"
+    "clean": "rm -r ./results; rm ./support/config/run-config.json; mkdir results",
+    "test:qa:chrome": "environment=qa browser=chrome headless=true debug=false ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts; rm ./support/config/run-config.json",
+    "test:qa:firefox": "environment=qa browser=firefox ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts; rm ./support/config/run-config.json",
+    "test:qa:safari": "environment=qa browser=safari ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts; rm ./support/config/run-config.json",
+    "test:qa:safari:responsive": "environment=qa browser=safari headless=false windowSize=393x851 ./node_modules/.bin/cucumber-js tests/features/**/*.feature --parallel 5; node cucumber-report-generator.ts; rm ./support/config/run-config.json",
+    "test:qa:chrome:parallel": "environment=qa browser=chrome ./node_modules/.bin/cucumber-js tests/features/**/*.feature --parallel 5; node cucumber-report-generator.ts; rm ./support/config/run-config.json",
+    "test:live:chrome": "environment=live browser=chrome ./node_modules/.bin/cucumber-js tests/features/**/*.feature; node cucumber-report-generator.ts; rm ./support/config/run-config.json"
   },
   "keywords": [],
   "author": "VD",
