--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,7 @@
   "ts-node": {
     "transpileOnly": true
   },
-  "compilerOptions": {}
+  "compilerOptions": {
+    "resolveJsonModule": true
+  }
 }
